include/maplibre_native_c/style.h


typedef struct mln_image_stretch {
  float from;
  float to;
} mln_image_stretch;
typedef struct mln_image_content {
  float left;
  float top;
  float right;
  float bottom;
} mln_image_content;
typedef struct mln_style_source_info {
  uint32_t size;
  uint32_t type;
  uint32_t fields;
  size_t id_size;
  bool is_volatile;
  bool has_attribution;
  size_t attribution_size;
  size_t url_size;
  size_t tile_count;
  double min_zoom;
  double max_zoom;
  uint32_t scheme;
  mln_lat_lng_bounds bounds;
  uint32_t tile_size;
  uint32_t vector_encoding;
  uint32_t raster_encoding;
} mln_style_source_info;
typedef struct mln_style_tile_source_options {
  uint32_t size;
  uint32_t fields;
  double min_zoom;
  double max_zoom;
  mln_buffer_view attribution;
  uint32_t scheme;
  mln_lat_lng_bounds bounds;
  uint32_t tile_size;
  uint32_t vector_encoding;
  uint32_t raster_encoding;
} mln_style_tile_source_options;
typedef struct mln_canonical_tile_id {
  uint32_t z;
  uint32_t x;
  uint32_t y;
} mln_canonical_tile_id;
typedef void (*mln_custom_geometry_source_tile_callback)(
  void* user_data, mln_canonical_tile_id tile_id
);
typedef void (*mln_custom_geometry_source_release_callback)(void* user_data);
typedef struct mln_custom_geometry_source_options {
  uint32_t size;
  uint32_t fields;
  mln_custom_geometry_source_tile_callback fetch_tile;
  mln_custom_geometry_source_tile_callback cancel_tile;
  void* user_data;
  double min_zoom;
  double max_zoom;
  double tolerance;
  uint32_t tile_size;
  uint32_t buffer;
  bool clip;
  bool wrap;
  mln_custom_geometry_source_release_callback release_user_data;
} mln_custom_geometry_source_options;
typedef struct mln_premultiplied_rgba8_image {
  uint32_t size;
  uint32_t width;
  uint32_t height;
  uint32_t stride;
  const uint8_t* pixels;
  size_t byte_length;
} mln_premultiplied_rgba8_image;
typedef struct mln_style_image_options {
  uint32_t size;
  uint32_t fields;
  const mln_image_stretch* stretch_x;
  size_t stretch_x_count;
  const mln_image_stretch* stretch_y;
  size_t stretch_y_count;
  mln_image_content content;
  uint32_t text_fit_width;
  uint32_t text_fit_height;
  float pixel_ratio;
  bool sdf;
} mln_style_image_options;
typedef struct mln_style_image_info {
  uint32_t size;
  uint32_t width;
  uint32_t height;
  uint32_t stride;
  size_t byte_length;
  size_t stretch_x_count;
  size_t stretch_y_count;
  mln_image_content content;
  uint32_t text_fit_width;
  uint32_t text_fit_height;
  float pixel_ratio;
  bool sdf;
  bool has_content;
  bool has_text_fit_width;
  bool has_text_fit_height;
} mln_style_image_info;