include/maplibre_native_c/runtime.h


MLN_API mln_status mln_network_status_get(uint32_t* out_status) MLN_NOEXCEPT;
MLN_API mln_status mln_network_status_set(uint32_t status) MLN_NOEXCEPT;
typedef struct mln_runtime_options {
  uint32_t size;
  uint32_t flags;
  const char* asset_path;
  const char* cache_path;
  uint64_t maximum_cache_size;
} mln_runtime_options;
typedef struct mln_runtime_event {
  uint32_t size;
  uint32_t type;
  uint32_t source_type;
  uint64_t source;
  int32_t code;
  uint32_t payload_type;
  const void* payload;
  size_t payload_size;
  const char* message;
  size_t message_size;
} mln_runtime_event;
typedef struct mln_resource_transform_response {
  uint32_t size;
  const char* url;
  void* context;
} mln_resource_transform_response;
MLN_API mln_status mln_resource_transform_response_set_url(
  mln_resource_transform_response* response, const char* url, size_t url_size
) MLN_NOEXCEPT;
typedef mln_status (*mln_resource_transform_callback)(
  void* user_data, uint32_t kind, const char* url,
  mln_resource_transform_response* out_response
);
typedef struct mln_resource_transform {
  uint32_t size;
  mln_resource_transform_callback callback;
  void* user_data;
} mln_resource_transform;
typedef struct mln_resource_request {
  uint32_t size;
  const char* url;
  uint32_t kind;
  uint32_t loading_method;
  uint32_t priority;
  uint32_t usage;
  uint32_t storage_policy;
  bool has_range;
  uint64_t range_start;
  uint64_t range_end;
  bool has_prior_modified;
  int64_t prior_modified_unix_ms;
  bool has_prior_expires;
  int64_t prior_expires_unix_ms;
  const char* prior_etag;
  const uint8_t* prior_data;
  size_t prior_data_size;
} mln_resource_request;
typedef struct mln_resource_response {
  uint32_t size;
  uint32_t status;
  uint32_t error_reason;
  const uint8_t* bytes;
  size_t byte_count;
  const char* error_message;
  bool must_revalidate;
  bool has_modified;
  int64_t modified_unix_ms;
  bool has_expires;
  int64_t expires_unix_ms;
  const char* etag;
  bool has_retry_after;
  int64_t retry_after_unix_ms;
} mln_resource_response;
typedef uint32_t (*mln_resource_provider_callback)(
  void* user_data, const mln_resource_request* request,
  mln_resource_request_handle handle
);
typedef struct mln_resource_provider {
  uint32_t size;
  mln_resource_provider_callback callback;
  void* user_data;
} mln_resource_provider;
MLN_API mln_runtime_options mln_runtime_options_default(void) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_create(
  const mln_runtime_options* options, mln_runtime* out_runtime
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_set_resource_provider(
  mln_runtime runtime, const mln_resource_provider* provider
) MLN_NOEXCEPT;
MLN_API mln_status mln_resource_request_complete(
  mln_resource_request_handle handle, const mln_resource_response* response
) MLN_NOEXCEPT;
MLN_API mln_status mln_resource_request_cancelled(
  mln_resource_request_handle handle, bool* out_cancelled
) MLN_NOEXCEPT;
MLN_API void mln_resource_request_release(
  mln_resource_request_handle handle
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_destroy(mln_runtime runtime) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_poll_event(
  mln_runtime runtime, mln_runtime_event* out_event, bool* out_has_event
) MLN_NOEXCEPT;