bindings/vala/vapi/maplibre-native-c.vapi


    [SimpleType]
    [CCode (cname = "mln_vulkan_owned_texture_descriptor", has_type_id = false)]
    public struct VulkanOwnedTextureDescriptor {
        public uint32 size;
        public RenderTargetExtent extent;
        public VulkanContextDescriptor context;
    }

    [SimpleType]
    [CCode (cname = "mln_vulkan_borrowed_texture_descriptor", has_type_id = false)]
    public struct VulkanBorrowedTextureDescriptor {
        public uint32 size;
        public RenderTargetExtent extent;
        public VulkanContextDescriptor context;
        public void* image;
        public void* image_view;
        public uint32 format;
        public uint32 initial_layout;
        public uint32 final_layout;
    }

    [SimpleType]
    [CCode (cname = "mln_opengl_owned_texture_descriptor", has_type_id = false)]
    public struct OpenGLOwnedTextureDescriptor {
        public uint32 size;
        public RenderTargetExtent extent;
        public OpenGLContextDescriptor context;
    }

    [SimpleType]
    [CCode (cname = "mln_opengl_borrowed_texture_descriptor", has_type_id = false)]
    public struct OpenGLBorrowedTextureDescriptor {
        public uint32 size;
        public RenderTargetExtent extent;
        public OpenGLContextDescriptor context;
        public uint32 texture;
        public uint32 target;
    }

    [SimpleType]
    [CCode (cname = "mln_metal_surface_descriptor", has_type_id = false)]
    public struct MetalSurfaceDescriptor {
        public uint32 size;
        public RenderTargetExtent extent;
        public MetalContextDescriptor context;
        public void* layer;
    }

    [SimpleType]
    [CCode (cname = "mln_vulkan_surface_descriptor", has_type_id = false)]
    public struct VulkanSurfaceDescriptor {
        public uint32 size;
        public RenderTargetExtent extent;
        public VulkanContextDescriptor context;
        public void* surface;
    }

    [SimpleType]
    [CCode (cname = "mln_opengl_surface_descriptor", has_type_id = false)]
    public struct OpenGLSurfaceDescriptor {
        public uint32 size;
        public RenderTargetExtent extent;
        public OpenGLContextDescriptor context;
        public void* surface;
    }

    [SimpleType]
    [CCode (cname = "mln_texture_image_info", has_type_id = false)]
    public struct TextureImageInfo {
        public uint32 size;
        public uint32 width;
        public uint32 height;
        public uint32 stride;
        public size_t byte_length;
    }

    [SimpleType]
    [CCode (cname = "mln_canonical_tile_id", has_type_id = false)]
    public struct CanonicalTileId {
        public uint32 z;
        public uint32 x;
        public uint32 y;
    }

    [CCode (cname = "mln_custom_geometry_source_tile_callback", has_target = false)]
    public delegate void CustomGeometrySourceTileCallback (void* user_data, CanonicalTileId tile_id);

    [SimpleType]
    [CCode (cname = "mln_custom_geometry_source_options", has_type_id = false)]
    public struct CustomGeometrySourceOptions {
        public uint32 size;
        public uint32 fields;
        public CustomGeometrySourceTileCallback fetch_tile;
        public CustomGeometrySourceTileCallback cancel_tile;
        public void* user_data;
        public double min_zoom;
        public double max_zoom;
        public double tolerance;
        public uint32 tile_size;
        public uint32 buffer;
        public bool clip;
        public bool wrap;
    }

    [SimpleType]
    [CCode (cname = "mln_premultiplied_rgba8_image", has_type_id = false)]
    public struct PremultipliedRgba8Image {
        public uint32 size;
        public uint32 width;
        public uint32 height;
        public uint32 stride;
        public uint8* pixels;
        public size_t byte_length;
    }

    [CCode (cname = "mln_style_source_info", has_type_id = false)]
    public struct StyleSourceInfo {
        public uint32 size;
        public uint32 type;
        public size_t id_size;
        public bool is_volatile;
        public bool has_attribution;
        public size_t attribution_size;
    }

    [SimpleType]
    [CCode (cname = "mln_style_tile_source_options", has_type_id = false)]
    public struct StyleTileSourceOptions {
        public uint32 size;
        public uint32 fields;
        public double min_zoom;
        public double max_zoom;
        public StringView attribution;
        public uint32 scheme;
        public LatLngBounds bounds;
        public uint32 tile_size;
        public uint32 vector_encoding;
        public uint32 raster_encoding;
    }

    [SimpleType]
    [CCode (cname = "mln_style_image_options", has_type_id = false)]
    public struct StyleImageOptions {
        public uint32 size;
        public uint32 fields;
        public float pixel_ratio;
        public bool sdf;
    }

    [SimpleType]
    [CCode (cname = "mln_style_image_info", has_type_id = false)]
    public struct StyleImageInfo {
        public uint32 size;
        public uint32 width;
        public uint32 height;
        public uint32 stride;
        public size_t byte_length;
        public float pixel_ratio;
        public bool sdf;
    }

    [SimpleType]
    [CCode (cname = "mln_metal_owned_texture_frame", has_type_id = false)]
    public struct MetalOwnedTextureFrame {
        public uint32 size;
        public uint64 generation;
        public uint32 width;
        public uint32 height;
        public double scale_factor;
        public uint64 frame_id;
        public void* texture;
        public void* device;
        public uint64 pixel_format;
    }

    [SimpleType]
    [CCode (cname = "mln_vulkan_owned_texture_frame", has_type_id = false)]
    public struct VulkanOwnedTextureFrame {
        public uint32 size;
        public uint64 generation;
        public uint32 width;
        public uint32 height;
        public double scale_factor;
        public uint64 frame_id;
        public void* image;
        public void* image_view;
        public void* device;
        public uint32 format;
        public uint32 layout;
    }

    [SimpleType]
    [CCode (cname = "mln_opengl_owned_texture_frame", has_type_id = false)]
    public struct OpenGLOwnedTextureFrame {
        public uint32 size;
        public uint64 generation;
        public uint32 width;
        public uint32 height;
        public double scale_factor;
        public uint64 frame_id;
        public uint32 texture;
        public uint32 target;
        public uint32 internal_format;
        public uint32 format;
        public uint32 type;
    }

    [CCode (cname = "mln_resource_transform_response", has_type_id = false)]
    public struct ResourceTransformResponse {
        public uint32 size;
        public unowned string? url;
        public void* context;
    }

    [CCode (cname = "mln_resource_transform_callback", has_target = false)]
    public delegate Status ResourceTransformCallback (void* user_data, uint32 kind, string url, ResourceTransformResponse* out_response);

    [CCode (cname = "mln_resource_transform", has_type_id = false)]
    public struct ResourceTransform {
        public uint32 size;
        public ResourceTransformCallback callback;
        public void* user_data;
    }

    [CCode (cname = "mln_resource_request", has_type_id = false)]
    public struct ResourceRequest {
        public uint32 size;
        public unowned string? url;
        public uint32 kind;
        public uint32 loading_method;
        public uint32 priority;
        public uint32 usage;
        public uint32 storage_policy;
        public bool has_range;
        public uint64 range_start;
        public uint64 range_end;
        public bool has_prior_modified;
        public int64 prior_modified_unix_ms;
        public bool has_prior_expires;
        public int64 prior_expires_unix_ms;
        public unowned string? prior_etag;
        public uint8* prior_data;
        public size_t prior_data_size;
    }

    [CCode (cname = "mln_resource_response", has_type_id = false)]
    public struct ResourceResponse {
        public uint32 size;
        public uint32 status;
        public uint32 error_reason;
        public uint8* bytes;
        public size_t byte_count;
        public unowned string? error_message;
        public bool must_revalidate;
        public bool has_modified;
        public int64 modified_unix_ms;
        public bool has_expires;
        public int64 expires_unix_ms;
        public unowned string? etag;
        public bool has_retry_after;
        public int64 retry_after_unix_ms;
    }

    [CCode (cname = "mln_resource_provider_callback", has_target = false)]
    public delegate uint32 ResourceProviderCallback (void* user_data, ResourceRequest* request, ResourceRequestHandle handle);

    [CCode (cname = "mln_resource_provider", has_type_id = false)]
    public struct ResourceProvider {
        public uint32 size;
        public ResourceProviderCallback callback;
        public void* user_data;
    }

    [CCode (cname = "mln_runtime_event", has_type_id = false)]
    public struct RuntimeEvent {
        public uint32 size;
        public uint32 type;
        public uint32 source_type;
        public void* source;
        public int32 code;
        public uint32 payload_type;
        public void* payload;
        public size_t payload_size;
        public char* message;
        public size_t message_size;
    }

    [CCode (cname = "mln_log_callback", has_target = false)]
    public delegate uint32 LogCallback (void* user_data, uint32 severity, uint32 event, int64 code, string? message);

    [CCode (cname = "mln_c_version")]
    public static uint32 c_version ();

    [CCode (cname = "mln_supported_render_backend_mask")]
    public static uint32 supported_render_backend_mask ();

    [CCode (cname = "mln_thread_last_error_message")]
    public static unowned string thread_last_error_message ();

    [CCode (cname = "mln_network_status_get")]
    public static Status network_status_get (out uint32 out_status);

    [CCode (cname = "mln_network_status_set")]
    public static Status network_status_set (uint32 status);

    [CCode (cname = "mln_log_set_callback")]
    public static Status log_set_callback (LogCallback? callback, void* user_data);

    [CCode (cname = "mln_log_clear_callback")]
    public static Status log_clear_callback ();

    [CCode (cname = "mln_log_set_async_severity_mask")]
    public static Status log_set_async_severity_mask (uint32 mask);

    [CCode (cname = "mln_runtime_options_default")]
    public static RuntimeOptions runtime_options_default ();

    [CCode (cname = "mln_runtime_create")]
    public static Status runtime_create (RuntimeOptions* options, out Runtime runtime);

    [CCode (cname = "mln_runtime_set_resource_provider")]
    public static Status runtime_set_resource_provider (Runtime runtime, ResourceProvider* provider);

    [CCode (cname = "mln_resource_request_complete")]
    public static Status resource_request_complete (ResourceRequestHandle handle, ResourceResponse* response);

    [CCode (cname = "mln_resource_request_cancelled")]
    public static Status resource_request_cancelled (ResourceRequestHandle handle, out bool out_cancelled);

    [CCode (cname = "mln_resource_request_release")]
    public static void resource_request_release (ResourceRequestHandle handle);

    [CCode (cname = "mln_resource_transform_response_set_url")]
    public static Status resource_transform_response_set_url (ResourceTransformResponse* response, string? url, size_t url_size);

    [CCode (cname = "mln_runtime_destroy")]
    public static Status runtime_destroy (Runtime runtime);

    [CCode (cname = "mln_runtime_run_once")]
    public static Status runtime_run_once (Runtime runtime);

    [CCode (cname = "mln_runtime_poll_event")]
    public static Status runtime_poll_event (Runtime runtime, RuntimeEvent* out_event, out bool out_has_event);
